2010-05-30  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed: rebaseline range-between-block-and-inline for Chromium.

        Add rebaselined test expectations for Chromium Win & Linux for
        editing/selection/range-between-block-and-inline.html

        * platform/chromium-linux/editing/selection/range-between-block-and-inline-expected.checksum: Added.
        * platform/chromium-linux/editing/selection/range-between-block-and-inline-expected.png: Added.
        * platform/chromium-linux/editing/selection/range-between-block-and-inline-expected.txt: Added.
        * platform/chromium-win/editing/selection/range-between-block-and-inline-expected.checksum: Added.
        * platform/chromium-win/editing/selection/range-between-block-and-inline-expected.png: Added.
        * platform/chromium-win/editing/selection/range-between-block-and-inline-expected.txt: Added.

2010-05-30  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed: fix Chromium test expectations.

        Fix Chromium test expectations for html5lib/runner.html

        * platform/chromium-mac/html5lib/runner-expected.txt: Removed.
        * platform/chromium-win/html5lib/runner-expected.txt: Removed.
        * platform/chromium/html5lib/runner-expected.txt: Added.
        * platform/chromium/html5lib/webkit-runner-expected.txt: Removed.

2010-05-30  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Enhance Qt DRT implementation to support platform scroll wheel events.

        https://bugs.webkit.org/show_bug.cgi?id=36004

        Unskip:

        fast/events/remove-child-onscroll.html
        fast/events/platform-wheelevent-in-scrolling-div.html
        fast/events/continuous-platform-wheelevent-in-scrolling-div.html

        Add platform-specific results for Qt. Required because QWheelEvent only supports sending an event